@@ -41,35 +41,61 @@
  */
 package org.netbeans.modules.jshell.project;
 
+import com.sun.source.tree.DirectiveTree;
+import com.sun.source.tree.ModuleTree;
+import com.sun.source.tree.RequiresTree;
+import com.sun.source.tree.Tree;
+import com.sun.source.tree.Tree.Kind;
 import java.io.File;
 import java.io.IOException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Properties;
 import java.util.Set;
+import javax.lang.model.element.ModuleElement;
+import javax.lang.model.element.ModuleElement.DirectiveKind;
+import javax.lang.model.element.ModuleElement.RequiresDirective;
 import org.netbeans.api.debugger.Session;
 import org.netbeans.api.java.classpath.ClassPath;
+import org.netbeans.api.java.classpath.JavaClassPathConstants;
 import org.netbeans.api.java.platform.JavaPlatform;
 import org.netbeans.api.java.platform.JavaPlatformManager;
 import org.netbeans.api.java.platform.Specification;
 import org.netbeans.api.java.project.JavaProjectConstants;
 import org.netbeans.api.java.queries.BinaryForSourceQuery;
+import org.netbeans.api.java.queries.SourceLevelQuery;
 import org.netbeans.api.java.queries.UnitTestForSourceQuery;
 import org.netbeans.api.java.source.ClassIndex.SearchScope;
 import org.netbeans.api.java.source.ClasspathInfo;
 import org.netbeans.api.java.source.ClasspathInfo.PathKind;
+import org.netbeans.api.java.source.CompilationInfo;
+import org.netbeans.api.java.source.JavaSource;
 import org.netbeans.api.java.source.SourceUtils;
 import org.netbeans.api.project.Project;
 import org.netbeans.api.project.ProjectManager;
+import org.netbeans.api.project.ProjectUtils;
 import org.netbeans.api.project.SourceGroup;
+import org.netbeans.api.project.Sources;
+import org.netbeans.modules.java.api.common.project.ProjectProperties;
 import org.netbeans.modules.java.j2seproject.api.J2SEPropertyEvaluator;
+import org.netbeans.modules.java.source.parsing.FileObjects;
 import org.netbeans.modules.jshell.launch.PropertyNames;
+import org.netbeans.modules.maven.api.execute.RunUtils;
+import org.netbeans.modules.parsing.api.ParserManager;
+import org.netbeans.modules.parsing.api.ResultIterator;
+import org.netbeans.modules.parsing.api.Source;
+import org.netbeans.modules.parsing.api.UserTask;
+import org.netbeans.modules.parsing.spi.ParseException;
 import org.netbeans.spi.java.classpath.support.ClassPathSupport;
+import org.netbeans.spi.project.AuxiliaryProperties;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
 import org.openide.filesystems.URLMapper;
@@ -155,6 +181,9 @@ public final class ShellProjectUtils {
      */
     public static Collection<String> findProjectImportedModules(Project project, Collection<String> in) {
         Collection<String> result = in != null ? in : new HashSet<>();
+        if (project == null) {
+            return result;
+        }
         
         for (SourceGroup sg : org.netbeans.api.project.ProjectUtils.getSources(project).getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA)) {
             if (isNormalRoot(sg)) {
@@ -176,9 +205,16 @@ public final class ShellProjectUtils {
     
     public static Set<String>   findProjectModules(Project project, Set<String> in) {
         Set<String> result = in != null ? in : new HashSet<>();
+        if (project == null) {
+            return result;
+        }
         
         for (SourceGroup sg : org.netbeans.api.project.ProjectUtils.getSources(project).getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA)) {
             if (isNormalRoot(sg)) {
+                FileObject fo = sg.getRootFolder().getFileObject("module-info.java");
+                if (fo == null) {
+                    continue;
+                }
                 URL u = URLMapper.findURL(sg.getRootFolder(), URLMapper.INTERNAL);
                 BinaryForSourceQuery.Result r = BinaryForSourceQuery.findBinaryRoots(u);
                 for (URL u2 : r.getRoots()) {
@@ -200,7 +236,9 @@ public final class ShellProjectUtils {
      */
     public static Map<String, Collection<String>>   findProjectModulesAndPackages(Project project) {
         Map<String, Collection<String>> result = new HashMap<>();
-        
+        if (project == null) {
+            return result;
+        }
         for (SourceGroup sg : org.netbeans.api.project.ProjectUtils.getSources(project).getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA)) {
             if (isNormalRoot(sg)) {
                 URL u = URLMapper.findURL(sg.getRootFolder(), URLMapper.INTERNAL);
@@ -208,19 +246,8 @@ public final class ShellProjectUtils {
                 for (URL u2 : r.getRoots()) {
                     String modName = SourceUtils.getModuleName(u2, true);
                     if (modName != null) {
-                        FileObject root2 = URLMapper.findFileObject(u2);
                         FileObject root = URLMapper.findFileObject(u);
                         Collection<String> pkgs = getPackages(root); //new HashSet<>();
-                        /*
-                        Enumeration en = root.getChildren(true);
-                        while (en.hasMoreElements()) {
-                            FileObject d = (FileObject)en.nextElement();
-                            if (!d.isFolder() || !Utilities.isJavaIdentifier(d.getNameExt())) {
-                                continue;
-                            }
-                            pkgs.add(FileUtil.getRelativePath(root, d).replace("/", "."));
-                        }
-                        */
                         if (!pkgs.isEmpty()) {
                             Collection<String> oldPkgs = result.get(modName);
                             if (oldPkgs != null) {
@@ -238,8 +265,13 @@ public final class ShellProjectUtils {
     
     private static Collection<String> getPackages(FileObject root) {
         ClasspathInfo cpi = ClasspathInfo.create(root);
+        // create CPI from just the single source root, to avoid packages from other
+        // modules
         ClasspathInfo rootCpi = new ClasspathInfo.Builder(
                 cpi.getClassPath(PathKind.BOOT)).
+                setClassPath(cpi.getClassPath(PathKind.COMPILE)).
+                setModuleSourcePath(cpi.getClassPath(PathKind.MODULE_SOURCE)).
+                setModuleCompilePath(cpi.getClassPath(PathKind.MODULE_COMPILE)).
                 setSourcePath(
                     ClassPathSupport.createClassPath(root)
                 ).build();
@@ -248,6 +280,29 @@ public final class ShellProjectUtils {
                 Collections.singleton(SearchScope.SOURCE)));
         pkgs.remove(""); // NOI18N
         return pkgs;
+    }
+    
+    public static boolean isModularProject(Project project) {
+        if (project == null) { 
+            return false;
+        }
+        JavaPlatform platform = findPlatform(project);
+        if (platform == null || !isModularJDK(platform)) {
+            return false;
+        }
+        String s = SourceLevelQuery.getSourceLevel(project.getProjectDirectory());
+        if (!(s != null && new SpecificationVersion("9").compareTo(new SpecificationVersion(s)) <= 0)) {
+            return false;
+        }
+        // find module-info.java
+        for (SourceGroup sg : ProjectUtils.getSources(project).getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA)) {
+            if (isNormalRoot(sg)) {
+                if (sg.getRootFolder().getFileObject("module-info.java") != null) { // NOI18N
+                    return true;
+                }
+            }
+        }
+        return false;
     }
     
     public static boolean isModularJDK(JavaPlatform pl) {
@@ -261,21 +316,88 @@ public final class ShellProjectUtils {
         return false;
     }
     
-    public static List<String> launchVMOptions(Project project) {
-        Collection<String> exportMods = ShellProjectUtils.findProjectImportedModules(project, 
-                ShellProjectUtils.findProjectModules(project, null));
+    /**
+     * Returns classpath to execute the application merged from all source roots of a project.
+     * 
+     * @param project
+     * @return 
+     */
+    public static ClassPath projectRuntimeModulePath(Project project) {
+        List<ClassPath> delegates = new ArrayList<>();
+        for (SourceGroup sg : org.netbeans.api.project.ProjectUtils.getSources(project).getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA)) {
+            ClassPath del = ClassPath.getClassPath(sg.getRootFolder(), JavaClassPathConstants.MODULE_EXECUTE_PATH); 
+            if (del != null && !del.entries().isEmpty()) {
+                delegates.add(del);
+            }
+        }
+        return ClassPathSupport.createProxyClassPath(delegates.toArray(new ClassPath[delegates.size()]));
+    }
+    
+    public static ClassPath projecRuntimeClassPath(Project project) {
+        if (project == null) {
+            return null;
+        }
+        boolean modular = isModularProject(project);
+        List<ClassPath> delegates = new ArrayList<>();
+        for (SourceGroup sg : org.netbeans.api.project.ProjectUtils.getSources(project).getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA)) {
+            if (!isNormalRoot(sg)) {
+                continue;
+            }
+            ClassPath del = null; 
+            if (modular) {
+                del = ClassPath.getClassPath(sg.getRootFolder(), JavaClassPathConstants.MODULE_EXECUTE_CLASS_PATH);
+            } else {
+                del = ClassPath.getClassPath(sg.getRootFolder(), ClassPath.EXECUTE); 
+            }
+            if (del != null && !del.entries().isEmpty()) {
+                delegates.add(del);
+            }
+        }
+        return ClassPathSupport.createProxyClassPath(delegates.toArray(new ClassPath[delegates.size()]));
+    }
+    
+    public static List<String[]> compilerPathOptions(Project project) {
+        List<String[]> result = new ArrayList<>();
+        List<String> exportMods = new ArrayList<>(
+                ShellProjectUtils.findProjectImportedModules(project, 
+                    ShellProjectUtils.findProjectModules(project, null))
+        );
         ShellProjectUtils.findProjectModules(project, null);
         boolean modular = isModularJDK(findPlatform(project));
         if (exportMods.isEmpty() || !modular) {
             return null;
         }
         List<String> addReads = new ArrayList<>();
-        for (String mod : exportMods) {
-            addReads.add(
-                String.format("--add-reads %s=ALL-UNNAMED",mod) // NOI18N
-            );
+        Collections.sort(exportMods);
+        result.add(new String[] { "--add-modules", String.join(",", exportMods) });
+        
+        // now export everything from the project:
+        Map<String, Collection<String>> packages = ShellProjectUtils.findProjectModulesAndPackages(project);
+        for (Map.Entry<String, Collection<String>> en : packages.entrySet()) {
+            String p = en.getKey();
+            Collection<String> vals = en.getValue();
+
+            for (String v : vals) {
+                result.add(new String[] { "--add-exports", String.format("%s/%s=ALL-UNNAMED", p, v)});
+            }
         }
-        addReads.add("--add-modules jdk.jshell");
+        return result;
+    }
+    
+    public static List<String> launchVMOptions(Project project) {
+        List<String> exportMods = new ArrayList<>(
+                ShellProjectUtils.findProjectImportedModules(project, 
+                    ShellProjectUtils.findProjectModules(project, null))
+        );
+        ShellProjectUtils.findProjectModules(project, null);
+        boolean modular = isModularJDK(findPlatform(project));
+        if (exportMods.isEmpty() || !modular) {
+            return null;
+        }
+        List<String> addReads = new ArrayList<>();
+        exportMods.add("jdk.jshell");
+        Collections.sort(exportMods);
+        addReads.add("--add-modules " + String.join(",", exportMods));
         addReads.add("--add-reads jdk.jshell=ALL-UNNAMED"); // NOI18N
         
         // now export everything from the project:
@@ -304,6 +426,10 @@ public final class ShellProjectUtils {
                     URL u = URLMapper.findURL(sg.getRootFolder(), URLMapper.INTERNAL);
                     BinaryForSourceQuery.Result r = BinaryForSourceQuery.findBinaryRoots(u);
                     for (URL ru : r.getRoots()) {
+                        // ignore JARs, prefer output folder:
+                        if (FileUtil.isArchiveArtifact(ru)) {
+                            continue;
+                        }
                         if (knownURLs.add(ru)) {
                             urls.add(ru);
                         }
@@ -324,5 +450,32 @@ public final class ShellProjectUtils {
         }
         JavaPlatform platform = findPlatform(ClassPath.getClassPath(ref, ClassPath.BOOT));
         return platform != null ? platform : JavaPlatform.getDefault();
+    }
+    
+    /**
+     * Attempts to detect Compile on Save enabled.
+     */
+    public static boolean isCompileOnSave(Project p) {
+        J2SEPropertyEvaluator  prjEval = p.getLookup().lookup(J2SEPropertyEvaluator.class);
+        if (prjEval == null) {
+            // try maven approach
+            return RunUtils.isCompileOnSaveEnabled(p);
+        }
+        String compileOnSaveProperty = prjEval.evaluator().getProperty(ProjectProperties.COMPILE_ON_SAVE);
+        if (compileOnSaveProperty == null || !Boolean.valueOf(compileOnSaveProperty)) {
+            return false;
+        }
+        Map<String, String> props = prjEval.evaluator().getProperties();
+        if (props == null) {
+            return false;
+        }
+        for (Map.Entry<String, String> e : props.entrySet()) {
+            if (e.getKey().startsWith(ProjectProperties.COMPILE_ON_SAVE_UNSUPPORTED_PREFIX)) {
+                if (e.getValue() != null && Boolean.valueOf(e.getValue())) {
+                    return false;
+                }
+            }
+        }                    
+        return true;
     }
 }
